[Helmi] Update pages research and alumni

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                   </div>
 
                   <div class="accordion-item">
-                    <a href="#" class="accordion-header" id="researchHeading">
+                    <a href="./pages/research/index.html" class="accordion-header" id="researchHeading">
                       <button
                         class="accordion-button collapsed"
                         type="button"
@@ -297,7 +297,7 @@
                   </div>
 
                   <div class="accordion-item">
-                    <a href="#" class="accordion-header" id="alumni">
+                    <a href="./pages/alumni/index.html" class="accordion-header" id="alumni">
                       <button class="accordion-button collapsed" type="button">
                         Alumni
                       </button>
