--- a/pages/enrollment/student-enrollment.html
+++ b/pages/enrollment/student-enrollment.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -19,7 +20,7 @@
       crossorigin="anonymous"
     />
 
-    <link rel="stylesheet" href="./../../assets/styles/styles.css">
+    <link rel="stylesheet" type="text/css" href="./../../assets/styles/styles.css">
 </head>
 <body>
     <!-- header -->
@@ -427,197 +428,57 @@
     </div>
 
     <!-- main content -->
-    <!-- Research  -->
-    <section id="research">
-      <div class="research__header">
-        <h2>Gunadarma University</h2>
-        <h4>RESEARCH</h4>
-      </div>
-      <div class="research__contents">
-        <nav>
-          <div class="nav nav-tabs" id="nav-tab" role="tablist">
-            <button
-              class="nav-link active"
-              id="research-group-tab"
-              data-bs-toggle="tab"
-              data-bs-target="#research-group"
-              type="button"
-              role="tab"
-              aria-controls="research-group"
-              aria-selected="true"
-            >
-              Research Group
-            </button>
-            <button
-              class="nav-link"
-              id="research-industry-tab"
-              data-bs-toggle="tab"
-              data-bs-target="#research-industry"
-              type="button"
-              role="tab"
-              aria-controls="research-industry"
-              aria-selected="false"
-            >
-              Research and Industry
-            </button>
-            <button
-              class="nav-link"
-              id="responses-covid-tab"
-              data-bs-toggle="tab"
-              data-bs-target="#responses-covid"
-              type="button"
-              role="tab"
-              aria-controls="responses-covid"
-              aria-selected="false"
-            >
-              Responses COVID-19
-            </button>
-          </div>
-        </nav>
-        <div class="tab-content" id="nav-tabContent">
-          <div
-            class="tab-pane fade show active"
-            id="research-group"
-            role="tabpanel"
-            aria-labelledby="research-group-tab"
-          >
-            <div class="container-fluid">
-              <div class="card">
-                <div class="row row-cols-md-2 align-items-center">
-                  <div class="col-md-5">
-                    <div class="research__boxImg">
-                      <img src="./../../assets/images/Mask Group 10.png" />
-                    </div>
-                  </div>
-                  <div class="col-md-7">
-                    <div class="research__content">
-                      <h3>
-                        The Importance of Implementing Social Distancing to
-                        Prevent COVID-19
-                      </h3>
-                      <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Saepe et blanditiis quia earum alias quisquam,
-                        molestias totam consectetur illo similique aliquam
-                        quidem illum consequatur nobis repudiandae sapiente,
-                        fuga veritatis. Minima.
-                      </p>
-                      <a href="#">Read More...</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="row row-cols-md-2 align-items-center">
-                  <div class="col-md-7">
-                    <div class="research__content">
-                      <h3>
-                        The Importance of Implementing Social Distancing to
-                        Prevent COVID-19
-                      </h3>
-                      <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Saepe et blanditiis quia earum alias quisquam,
-                        molestias totam consectetur illo similique aliquam
-                        quidem illum consequatur nobis repudiandae sapiente,
-                        fuga veritatis. Minima.
-                      </p>
-                      <a href="#">Read More...</a>
-                    </div>
-                  </div>
-                  <div class="col-md-5">
-                    <div class="research__boxImg">
-                      <img src="./../../assets/images/Mask Group 13.png" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <div class="row row-cols-md-2 align-items-center">
-                  <div class="col-md-5">
-                    <div class="research__boxImg">
-                      <img src="./../../assets/images/Mask Group 11.png" />
-                    </div>
-                  </div>
-                  <div class="col-md-7">
-                    <div class="research__content">
-                      <h3>
-                        The Importance of Implementing Social Distancing to
-                        Prevent COVID-19
-                      </h3>
-                      <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing
-                        elit. Saepe et blanditiis quia earum alias quisquam,
-                        molestias totam consectetur illo similique aliquam
-                        quidem illum consequatur nobis repudiandae sapiente,
-                        fuga veritatis. Minima.
-                      </p>
-                      <a href="#">Read More...</a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div
-            class="tab-pane fade"
-            id="research-industry"
-            role="tabpanel"
-            aria-labelledby="research-industry-tab"
-          >
-            Research and Industry
-          </div>
-          <div
-            class="tab-pane fade"
-            id="responses-covid"
-            role="tabpanel"
-            aria-labelledby="responses-covid-tab"
-          >
-            Responses COVID-19
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <!-- App management landing page -->
-    <section class="applicationManagement">
+    <!-- Enrollment landing page -->
+    <section class="enrollmentLandingPage">
       <div class="app__header">
         <h2>International Programs</h2>
         <h4>STUDENT ENROLLMENT</h4>
       </div>
       <div class="app__content">
         <div class="container">
-          <div class="row align-items-center">
+          <div class="row app__description">
             <div class="col">
-              <div class="app__table">
-                <h5>Application Management</h5>
-                <div class="table__app">
-                  <p>Your Applications</p>
-                </div>
-                <div class="table-responsive">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th width="47%" scope="col">Type</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Started</th>
-                        <th scope="col">Submitted</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr>
-                        <td colspan="4">You have not yet started an application using this account.</td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-
-                <div class="app__button" id="btnNewApp">
-                  <button class="btn button__primary">Start New Application</button>
-                </div>
-              </div>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum ad, reiciendis vitae repudiandae ipsum voluptas beatae distinctio! Quos nobis, molestiae veritatis incidunt repellat enim quaerat at delectus, voluptas accusantium totam.</p>
             </div>
           </div>
+          <div class="row app__stepGuide">
+            <div class="col">
+              <h6>Registration Step:</h6>
+              <ul>
+                <li>
+                  <div class="app__stepGuide-1">
+                    <h5>STEP 1</h5>
+                    <h6>Application (Select Type)</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis debitis labore culpa esse voluptatum expedita quae excepturi beatae necessitatibus ducimus iusto, itaque voluptatibus distinctio eius ratione officiis et hic natus!</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="app__stepGuide-2">
+                    <h5>STEP 2</h5>
+                    <h6>Personal Details (Fill the Form)</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis debitis labore culpa esse voluptatum expedita quae excepturi beatae necessitatibus ducimus iusto, itaque voluptatibus distinctio eius ratione officiis et hic natus!</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="app__stepGuide-3">
+                    <h5>STEP 3</h5>
+                    <h6>Verification (Review and Submit)</h6>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis debitis labore culpa esse voluptatum expedita quae excepturi beatae necessitatibus ducimus iusto, itaque voluptatibus distinctio eius ratione officiis et hic natus!</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="row app__lastDescription">
+            <div class="col">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis recusandae doloribus unde vel impedit reiciendis provident placeat voluptate et laudantium? Architecto accusamus reprehenderit non iste ipsa sequi fuga dignissimos enim.</p>
+            </div>
+          </div>
+        </div>
+        
+        <div class="app__button" id="btnNewApp">
+          <button class="btn button__primary">Start New Application</button>
         </div>
       </div>
     </section>
@@ -674,10 +535,13 @@
 
                 <div class="row">
                   <div class="col-md-8 col-12">
-                    <ul class="list-group">
-                      <li class="list-group-item active">Study permit for more than 3 months</li>
-                      <li class="list-group-item">Study permit for less than 3 months</li>
-                    </ul>
+                    <select class="form-select" size="2">
+                      <option selected>
+                        Open this select menu
+                      </option>
+                      <option value="1">
+                      Open this select menu</option>
+                    </select>
                   </div>
                 </div>
               </div>
