update css dan pages

--- a/pages/users/edit-profile.html
+++ b/pages/users/edit-profile.html
@@ -419,11 +419,7 @@
                                     <div class="col">
                                         <div class="mb-3">
                                             <label for="address">Address</label>
-                                            <textarea class="form-control"
-                                            Kota Bogor" id="address" style="height: 130px">
-                                            Villa Bogor Indah blok EE 
-                                            3 no 9, Bogor Utara, 16157
-                                            </textarea>
+                                            <textarea class="form-control" id="address" rows="3"></textarea>
                                         </div>
                                     </div>
                                 </div>
