--- a/pages/research/index.html
+++ b/pages/research/index.html
@@ -380,7 +380,7 @@
                 </div>
                 <div class="research__subContext mt-4">
                     <div class="container-fluid">
-                        <nav>
+                        <!-- <nav>
                             <div class="nav nav-tabs" id="nav-tab" role="tablist">
                                 <button class="nav-link active" id="research-group-tab" data-bs-toggle="tab"
                                     data-bs-target="#research-group" type="button" role="tab"
@@ -398,10 +398,21 @@
                                     Responses COVID-19
                                 </button>
                             </div>
-                        </nav>
+                        </nav> -->
+                        <ul class="nav nav-tabs">
+                            <li class="nav-item">
+                              <a class="nav-link active" aria-current="page" href="#">Research Group</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Research and Industry</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">Responses COVID-19</a>
+                            </li>
+                          </ul>
+                        
                         <div class="tab-content" id="nav-tabContent">
-                            <div class="tab-pane fade show active" id="research-group" role="tabpanel"
-                                aria-labelledby="research-group-tab">
+                            <div>
                                 <div class="container-fluid">
                                     <div class="card">
                                         <div class="row row-cols-md-2 align-items-center">
@@ -479,14 +490,6 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="tab-pane fade" id="research-industry" role="tabpanel"
-                                aria-labelledby="research-industry-tab">
-                                Research and Industry
-                            </div>
-                            <div class="tab-pane fade" id="responses-covid" role="tabpanel"
-                                aria-labelledby="responses-covid-tab">
-                                Responses COVID-19
                             </div>
                         </div>
                     </div>
