--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
         <h4>RESEARCH</h4>
       </div>
       <div class="research__contents">
-        <nav>
+        <!-- <nav>
           <div class="nav nav-tabs" id="nav-tab" role="tablist">
             <button
               class="nav-link active"
@@ -587,7 +587,19 @@
               Responses COVID-19
             </button>
           </div>
-        </nav>
+        </nav> -->
+        <ul class="nav nav-tabs">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Research Group</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Research and Industry</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Responses COVID-19</a>
+          </li>
+        </ul>
+        
         <div class="tab-content" id="nav-tabContent">
           <div
             class="tab-pane fade show active"
@@ -702,7 +714,7 @@
 
       <div class="gundarGraduates__contents">
         <div class="gundarGraduates__slider">
-          <div class="swiper-container">
+          <div class="swiper-container swiperGraduates">
             <div class="swiper-wrapper">
               <div class="swiper-slide">
                 <div class="card">
@@ -876,7 +888,7 @@
     <script type="module" src="./assets/scripts/main.js"></script>
 
     <script>
-      const swiper = new Swiper('.swiper-container', {
+      const swiperGraduates = new Swiper('.swiperGraduates', {
     // slidesPerView:3,
     // spaceBetween: 30,
     // loop: true,
