[Helmi] Change Route

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
                             <div class="accordion-item">
                               <a
-                                href="#"
+                                href="./pages/courses/keyDates/index.html"
                                 class="accordion-header"
                                 id="keyDates"
                               >
@@ -208,7 +208,7 @@
                   </div>
 
                   <div class="accordion-item">
-                    <a href="#" class="accordion-header" id="location">
+                    <a href="./pages/location/index.html" class="accordion-header" id="location">
                       <button class="accordion-button collapsed" type="button">
                         Location
                       </button>
