[Helmi] Update Routing

--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
                         <div class="accordion__child-menu">
                           <ul>
                             <li>
-                              <a href="#">About</a>
+                              <a href="/pages/about/index.html">About</a>
                             </li>
                             <li>
-                              <a href="#">News</a>
+                              <a href="/pages/about/news.html">News</a>
                             </li>
                             <li>
                               <a href="#">Event</a>
