[Helmi] Update Routing

--- a/index.html
+++ b/index.html
@@ -234,10 +234,10 @@
                         <div class="accordion__child-menu">
                           <ul>
                             <li>
-                              <a href="/pages/about/index.html">About</a>
+                              <a href="./pages/about/index.html">About</a>
                             </li>
                             <li>
-                              <a href="/pages/about/news.html">News</a>
+                              <a href="./pages/about/news.html">News</a>
                             </li>
                             <li>
                               <a href="#">Event</a>
@@ -271,13 +271,13 @@
                         <div class="accordion__child-menu">
                           <ul>
                             <li>
-                              <a href="#">Why study at Gunadarma</a>
+                              <a href="./pages/life-gundar/why-study.html">Why study at Gunadarma</a>
                             </li>
                             <li>
-                              <a href="#">Student life</a>
+                              <a href="./pages/life-gundar/student-life.html">Student life</a>
                             </li>
                             <li>
-                              <a href="#">Graduations</a>
+                              <a href="./pages/life-gundar/graduations.html">Graduations</a>
                             </li>
                           </ul>
                         </div>
