[Helmi] change nav tabs to nav link

--- a/pages/how-to-apply/index.html
+++ b/pages/how-to-apply/index.html
@@ -370,7 +370,7 @@
                 </div>
                 <div class="howToApply__context">
                     <div class="container-fluid">
-                        <nav>
+                        <!-- <nav>
                             <div class="nav nav-tabs" id="nav-tab" role="tablist">
                                 <button class="nav-link active" id="single-tab" data-bs-toggle="tab"
                                     data-bs-target="#single" type="button" role="tab" aria-controls="single"
@@ -388,7 +388,18 @@
                                     Postgraduate degree applications
                                 </button>
                             </div>
-                        </nav>
+                        </nav> -->
+                        <ul class="nav nav-tabs">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Single unit applications</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Undergraduate degree applications</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Postgraduate degree applications</a>
+                            </li>
+                        </ul>
                         <div class="tab-content" id="nav-tabContent">
                             <div class="tab-pane fade show active" id="single" role="tabpanel"
                                 aria-labelledby="single-tab">
