[Helmi] Update Sidebar Link Login and after login desain

--- a/index.html
+++ b/index.html
@@ -78,9 +78,22 @@
               <div class="sidebar__logo">
                 <img src="./assets/images/logo-gundar.png" alt="gunadarma" />
               </div>
+              <!-- sebelum login -->
+              <div class="d-flex justify-content-end my-3 mx-3 btn-login">
+                <a href="./pages/login/index.html">Login</a>
+              </div>
+              <!-- sesudah login -->
+              <!-- <div class="d-flex align-items-center justify-content-between box__afterLogin">
+                <div class="d-flex align-items-center">
+                  <div class="boxAvatar mx-3">
+                    <img src="./assets/images/gunadarma-life.png" alt="" />
+                  </div>
+                  <p class="profile__name mx-2 my-5">Anggie Febi Yaditha</p>
+                </div>
+                <a class="mx-3" href="#">Logout</a>
+              </div> -->
               <div class="sidebar__menu">
                 <div class="accordion accordion-flush" id="accordionCourse">
-
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="menuCourse">
                       <button
@@ -109,7 +122,11 @@
                                 id="findCourseParent"
                               >
                                 <button
-                                  class="accordion-button collapsed accordion__child"
+                                  class="
+                                    accordion-button
+                                    collapsed
+                                    accordion__child
+                                  "
                                   type="button"
                                   data-bs-toggle="collapse"
                                   data-bs-target="#findCourse"
@@ -121,20 +138,33 @@
                               </h2>
                               <div
                                 id="findCourse"
-                                class="accordion-collapse collapse accordion__show"
+                                class="
+                                  accordion-collapse
+                                  collapse
+                                  accordion__show
+                                "
                                 aria-labelledby="findCourse"
                                 data-bs-parent="#findCourseParent"
                               >
                                 <div class="accordion-body">
                                   <ul>
                                     <li>
-                                      <a href="./pages/courses/short-course.html">Short Courses</a>
+                                      <a
+                                        href="./pages/courses/short-course.html"
+                                        >Short Courses</a
+                                      >
                                     </li>
                                     <li>
-                                      <a href="./pages/courses/undergraduate/undergraduate.html">Undergraduate Courses</a>
+                                      <a
+                                        href="./pages/courses/undergraduate/undergraduate.html"
+                                        >Undergraduate Courses</a
+                                      >
                                     </li>
                                     <li>
-                                      <a href="./pages/courses/postgraduate/postgraduate.html">Postgraduate Courses</a>
+                                      <a
+                                        href="./pages/courses/postgraduate/postgraduate.html"
+                                        >Postgraduate Courses</a
+                                      >
                                     </li>
                                   </ul>
                                 </div>
@@ -169,7 +199,6 @@
                                   How to apply
                                 </button>
                               </a>
-                              
                             </div>
 
                             <div class="accordion-item">
@@ -208,7 +237,11 @@
                   </div>
 
                   <div class="accordion-item">
-                    <a href="./pages/location/index.html" class="accordion-header" id="location">
+                    <a
+                      href="./pages/location/index.html"
+                      class="accordion-header"
+                      id="location"
+                    >
                       <button class="accordion-button collapsed" type="button">
                         Location
                       </button>
@@ -217,10 +250,14 @@
 
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="aboutGunadarmaHeading">
-                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                      data-bs-target="#aboutGunadarma"
-                      aria-expanded="false"
-                      aria-controls="aboutGunadarma">
+                      <button
+                        class="accordion-button collapsed"
+                        type="button"
+                        data-bs-toggle="collapse"
+                        data-bs-target="#aboutGunadarma"
+                        aria-expanded="false"
+                        aria-controls="aboutGunadarma"
+                      >
                         About Gunadarma
                       </button>
                     </h2>
@@ -271,13 +308,19 @@
                         <div class="accordion__child-menu">
                           <ul>
                             <li>
-                              <a href="./pages/life-gundar/why-study.html">Why study at Gunadarma</a>
+                              <a href="./pages/life-gundar/why-study.html"
+                                >Why study at Gunadarma</a
+                              >
                             </li>
                             <li>
-                              <a href="./pages/life-gundar/student-life.html">Student life</a>
+                              <a href="./pages/life-gundar/student-life.html"
+                                >Student life</a
+                              >
                             </li>
                             <li>
-                              <a href="./pages/life-gundar/graduations.html">Graduations</a>
+                              <a href="./pages/life-gundar/graduations.html"
+                                >Graduations</a
+                              >
                             </li>
                           </ul>
                         </div>
@@ -286,18 +329,23 @@
                   </div>
 
                   <div class="accordion-item">
-                    <a href="./pages/research/index.html" class="accordion-header" id="researchHeading">
-                      <button
-                        class="accordion-button collapsed"
-                        type="button"
-                      >
+                    <a
+                      href="./pages/research/index.html"
+                      class="accordion-header"
+                      id="researchHeading"
+                    >
+                      <button class="accordion-button collapsed" type="button">
                         Research
                       </button>
                     </a>
                   </div>
 
                   <div class="accordion-item">
-                    <a href="./pages/alumni/index.html" class="accordion-header" id="alumni">
+                    <a
+                      href="./pages/alumni/index.html"
+                      class="accordion-header"
+                      id="alumni"
+                    >
                       <button class="accordion-button collapsed" type="button">
                         Alumni
                       </button>
@@ -334,7 +382,11 @@
             Start a Journey
           </button>
           <button type="button" class="btn secondary__button">
-            <a href="./pages/courses/short-course.html" class="text-white text-decoration-none">Program Study</a>
+            <a
+              href="./pages/courses/short-course.html"
+              class="text-white text-decoration-none"
+              >Program Study</a
+            >
           </button>
         </div>
       </div>
@@ -349,7 +401,10 @@
       <div class="interProgram__context">
         <div class="container-fluid">
           <div
-            class="row row-cols-lg-4 row-cols-1 row-cols-md-3 justify-content-center"
+            class="
+              row row-cols-lg-4 row-cols-1 row-cols-md-3
+              justify-content-center
+            "
           >
             <!-- forloop di BE -->
             <div class="col">
@@ -398,7 +453,9 @@
           </div>
           <div class="interProgram__allCourse">
             <button class="btn primary__button">
-              <a href="./pages/courses/short-course.html" class="text-white">All Courses</a>
+              <a href="./pages/courses/short-course.html" class="text-white"
+                >All Courses</a
+              >
             </button>
           </div>
         </div>
@@ -472,7 +529,12 @@
     <div class="gunadarma__icons">
       <div class="container">
         <div
-          class="row row-cols-2 row-cols-lg-4 gx-md-5 gx-4 gy-0 justify-content-between"
+          class="
+            row row-cols-2 row-cols-lg-4
+            gx-md-5 gx-4
+            gy-0
+            justify-content-between
+          "
         >
           <div class="col">
             <div class="gunadarma__icon">
@@ -590,7 +652,9 @@
         </nav> -->
         <ul class="nav nav-tabs">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Research Group</a>
+            <a class="nav-link active" aria-current="page" href="#"
+              >Research Group</a
+            >
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Research and Industry</a>
@@ -599,7 +663,7 @@
             <a class="nav-link" href="#">Responses COVID-19</a>
           </li>
         </ul>
-        
+
         <div class="tab-content" id="nav-tabContent">
           <div
             class="tab-pane fade show active"
@@ -804,7 +868,11 @@
               <h5>Locations</h5>
               <div class="location__content">
                 <p>Kampus Depok (Kampus D)</p>
-                <p>Jln.Margonda Raya No 100 Gd2. Lt2 <br> Pondok Cina, Depok 16424 <br> Jawa Barat - Indonesia</p>
+                <p>
+                  Jln.Margonda Raya No 100 Gd2. Lt2 <br />
+                  Pondok Cina, Depok 16424 <br />
+                  Jawa Barat - Indonesia
+                </p>
                 <a href="#">Kampus Lainnya</a>
               </div>
             </div>
@@ -816,49 +884,57 @@
                 <ul>
                   <li>
                     <a href="http://staffsite.gunadarma.ac.id/" target="_blank"
-                      >Staffsite</a>
+                      >Staffsite</a
+                    >
                   </li>
                   <li>
-                    <a href="https://studentsite.gunadarma.ac.id/" target="_blank">Studensite</a>
+                    <a
+                      href="https://studentsite.gunadarma.ac.id/"
+                      target="_blank"
+                      >Studensite</a
+                    >
                   </li>
                   <li>
-                    <a href="http://career.gunadarma.ac.id/" target="_blank">CareerCenter</a>
+                    <a href="http://career.gunadarma.ac.id/" target="_blank"
+                      >CareerCenter</a
+                    >
                   </li>
                   <li>
-                    <a href="#">
-                      Library
-                    </a>
+                    <a href="#"> Library </a>
                   </li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="col">
-              <div class="row">
-                <div class="email__gundar">
-                  <div class="email__boxImg">
-                    <img src="./assets/images/icons/email.png" alt="">
-                  </div>
-                  <div class="email__content">
-                    <h5>Email</h5>
-                    <p>@Gunadarma.ac.id</p>
-                  </div>
+            <div class="row">
+              <div class="email__gundar">
+                <div class="email__boxImg">
+                  <img src="./assets/images/icons/email.png" alt="" />
+                </div>
+                <div class="email__content">
+                  <h5>Email</h5>
+                  <p>@Gunadarma.ac.id</p>
+                </div>
               </div>
               <div class="row">
                 <div class="telephone__gundar">
                   <div class="telephone__boxImg">
-                    <img src="./assets/images/icons/phone-call.png" alt="Telephone">
+                    <img
+                      src="./assets/images/icons/phone-call.png"
+                      alt="Telephone"
+                    />
                   </div>
                   <div class="telephone__content">
                     <h5>Telephone</h5>
                     <p>123456789</p>
                   </div>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
     </div>
 
     <!-- footer -->
@@ -867,8 +943,8 @@
         <div class="row">
           <div class="col">
             <p>
-              <span id="newYear"></span> Copyright Gunadarma University-All rights
-              reserved
+              <span id="newYear"></span> Copyright Gunadarma University-All
+              rights reserved
             </p>
           </div>
         </div>
@@ -888,33 +964,33 @@
     <script type="module" src="./assets/scripts/main.js"></script>
 
     <script>
-      const swiperGraduates = new Swiper('.swiperGraduates', {
-    // slidesPerView:3,
-    // spaceBetween: 30,
-    // loop: true,
-        effect: 'coverflow',
+      const swiperGraduates = new Swiper(".swiperGraduates", {
+        // slidesPerView:3,
+        // spaceBetween: 30,
+        // loop: true,
+        effect: "coverflow",
         grabCursor: true,
         centeredSlides: true,
-          slidesPerView: 'auto',
-          autoplay: {
+        slidesPerView: "auto",
+        autoplay: {
           delay: 3000,
           disableOnInteraction: false,
-          },
-          coverflowEffect: {
-            rotate: 50,
-            stretch: 0,
-            depth: 50,
-            modifier: 1,
-            slideShadows: true,
-          },
+        },
+        coverflowEffect: {
+          rotate: 50,
+          stretch: 0,
+          depth: 50,
+          modifier: 1,
+          slideShadows: true,
+        },
         pagination: {
-            el: '.swiper-pagination',
+          el: ".swiper-pagination",
         },
         navigation: {
-            nextEl: '.swiper-button-next',
-            prevEl: '.swiper-button-prev',
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
         },
-    });
+      });
     </script>
   </body>
 </html>
