[Helmi] Update Sidebar Link Login and after login desain

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                 <img src="./assets/images/logo-gundar.png" alt="gunadarma" />
               </div>
               <!-- sebelum login -->
-              <div class="d-flex justify-content-end my-3 mx-3 btn-login">
+              <!-- <div class="d-flex justify-content-end my-3 mx-3 btn-login">
                 <a href="./pages/login/index.html">Login</a>
-              </div>
+              </div> -->
               <!-- sesudah login -->
               <!-- <div class="d-flex align-items-center justify-content-between box__afterLogin">
                 <div class="d-flex align-items-center">
@@ -348,6 +348,24 @@
                     >
                       <button class="accordion-button collapsed" type="button">
                         Alumni
+                      </button>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="sidebar__menu">
+                <div class="accordion" id="accordionLogin">
+                  <div class="accordion-item login">
+                    <a
+                      href="./pages/login/index.html"
+                      class="accordion-header"
+                      id="login"
+                    >
+                      <button
+                        class="accordion-button login collapsed"
+                        type="button"
+                      >
+                        Login
                       </button>
                     </a>
                   </div>
